# cppchess

./: CMakeLists.txt
include/: ce.h  enums.h  piece.h  zobrist.h
src/: ce.cpp  main.cpp  piece.cpp  zobrist.cpp
